Improve Config Search Functionality  (#84)
* Improve search functionality

- Search now searches in all sub categories under the current level
- Search now limits the displayed config to match the filtered settings, instead of highlighting the setting in the current level.

* Implemented fuzzy search for configuration menu

- Replace substring matching with modified Levenshtein Distance Algorithm with match prioritization and length normalization
- Strips white spaces from search query
- The search now returns empty list for non matching queries

* refine search scoring, propagate config type to entries, fix tooltip clipping

* fix disabled editing for server config when searching

* address copilot feedback

* address copilot feedback

---------

Co-authored-by: zelophed <github@zelophed.me>